# SCC-CamGeo2d

./: .gitignore  CMakeLists.txt  CamGeo2dLib.mk  README.md  camcirc.cpp  camcirc.h  camellipse.cpp  camellipse.h  camgeoimpexp.h  camlink.cpp  camlink.h  campoly.cpp  campoly.h  camxyrct.cpp  camxyrct.h  cbentity.cpp  cbentity.h  entity.h  entitygph.cpp  entitygph.h  geoentity.h  geoexit.cpp  geoexit.h
